--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin url="https://github.com/krasa/FrameSwitcher">
     <name>Frame Switcher</name>
     <id>FrameSwitcher</id>
-    <version>3.23.0-193</version>
+    <version>3.24.0-193</version>
 
     <vendor url="https://github.com/krasa/FrameSwitcher" email="vojta.krasa@gmail.com">Vojtech
         Krasa
@@ -31,6 +31,10 @@
       ]]></description>
 
     <change-notes><![CDATA[  
+	      3.24.0
+		  <br/> - More reliable switching
+		  <br/> - Project icons - can be disabled in settings (looking for: icon.svg, icon.png, resources\META-INF\pluginIcon.svg, META-INF\pluginIcon.svg)
+	        <br/><br/>
 	      3.23.0
 		  <br/> - Added: you can include the whole workspace in the settings, so that all projects gets added to the list.
 	        <br/><br/>
