--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin url="https://github.com/krasa/FrameSwitcher">
 	<name>Frame Switcher</name>
 	<id>FrameSwitcher</id>
-	<version>3.26.1-203</version>
+	<version>3.27.0-203</version>
 
 	<!-- please see http://confluence.jetbrains.net/display/IDEADEV/Build+Number+Ranges for description -->
 	<idea-version since-build="203.4204"/>
@@ -34,6 +34,8 @@
       ]]></description>
 
 	<change-notes><![CDATA[  
+	      3.27.0
+		  <br/> - Fixed for IntelliJ 2021.2
 	      3.26.0
 		  <br/> - Remote switching improvements
 	        <br/><br/>
