--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,10 +1,7 @@
-<idea-plugin url="https://github.com/krasa/FrameSwitcher">
+<idea-plugin version="2">
 	<name>Frame Switcher</name>
 	<id>FrameSwitcher</id>
-	<version>3.32.0-212</version>
 
-	<!-- please see http://confluence.jetbrains.net/display/IDEADEV/Build+Number+Ranges for description -->
-	<idea-version since-build="212.3117"/>
 	<vendor url="https://github.com/krasa/FrameSwitcher" email="vojta.krasa@gmail.com">Vojtech
 		Krasa
 	</vendor>
