#43 recentProjectsAction.getTemplatePresentation().getText() - for unique name in 232.7295

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,16 +4,16 @@ pluginName=FrameSwitcher
 pluginRepositoryUrl=https://github.com/krasa/FrameSwitcher
 
 # SemVer format -> https://semver.org
-pluginVersion=4.5.0-241.8102
+pluginVersion=4.5.0-232.7295
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
-pluginSinceBuild=241.8102.112
-pluginUntilBuild=
+pluginSinceBuild=232.7295.16
+pluginUntilBuild=241.8102.0
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
 platformType=IC
-#platformVersion=241.8102
-platformVersion=LATEST-EAP-SNAPSHOT
+platformVersion=2023.2.5
+#platformVersion=LATEST-EAP-SNAPSHOT
 
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
