--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ pluginName=FrameSwitcher
 pluginRepositoryUrl=https://github.com/krasa/FrameSwitcher
 
 # SemVer format -> https://semver.org
-pluginVersion=4.6.0-241.8102
+pluginVersion=4.7.0-241.8102
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 pluginSinceBuild=241.8102.112
@@ -12,8 +12,8 @@ pluginUntilBuild=
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
 platformType=IC
-#platformVersion=241.8102
-platformVersion=LATEST-EAP-SNAPSHOT
+platformVersion=2024.1
+#platformVersion=LATEST-EAP-SNAPSHOT
 
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
