--- a/gradle.properties
+++ b/gradle.properties
@@ -7,27 +7,29 @@ pluginRepositoryUrl=https://github.com/krasa/FrameSwitcher
 pluginVersion=4.8.0-242.21829
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
-pluginSinceBuild=242.21829
+pluginSinceBuild=243
 pluginUntilBuild=
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
 platformType=IC
-platformVersion=2024.2.1
+#platformVersion=2024.2.1
 #platformVersion=LATEST-EAP-SNAPSHOT
+platformVersion=2025.2
 
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
 platformPlugins=
+platformBundledPlugins=
+
 # Gradle Releases -> https://github.com/gradle/gradle/releases
-gradleVersion=8.5
+gradleVersion=8.14.3
+
 # Opt-out flag for bundling Kotlin standard library -> https://jb.gg/intellij-platform-kotlin-stdlib
 kotlin.stdlib.default.dependency=false
+
 # Enable Gradle Configuration Cache -> https://docs.gradle.org/current/userguide/configuration_cache.html
-org.gradle.configuration-cache=false
+org.gradle.configuration-cache=true
+
 # Enable Gradle Build Cache -> https://docs.gradle.org/current/userguide/build_cache.html
 org.gradle.caching=true
-# Enable Gradle Kotlin DSL Lazy Property Assignment -> https://docs.gradle.org/current/userguide/kotlin_dsl.html#kotdsl:assignment
-systemProp.org.gradle.unsafe.kotlin.assignment=true
-# Temporary workaround for Kotlin Compiler OutOfMemoryError -> https://jb.gg/intellij-platform-kotlin-oom
-kotlin.incremental.useClasspathSnapshot=false
