--- a/gradle.properties
+++ b/gradle.properties
@@ -4,11 +4,11 @@ pluginName=FrameSwitcher
 pluginRepositoryUrl=https://github.com/krasa/FrameSwitcher
 
 # SemVer format -> https://semver.org
-pluginVersion=4.8.0-242.21829
+pluginVersion=4.9.0-243
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 pluginSinceBuild=243
-pluginUntilBuild=
+#pluginUntilBuild=
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
 platformType=IC
